# QuestCAE

./: CMakeLists.txt  Doxyfile  README.md  preprocessed
.VSCodeCounter/2024-07-25_21-29-28/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-08-04_19-30-38/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-08-05_21-04-16/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-08-18_20-56-36/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-08-25_21-32-07/: details.md  diff-details.md  (+7 more)
questCAE/: CMakeLists.txt
questCAE/IO/: logger.cpp  logger.hpp  logger_message.cpp  logger_message.hpp  logger_output.cpp  logger_output.hpp  unv_output.cpp  unv_output.hpp
questCAE/container/: array_1d.hpp  csr_matrix.hpp  data_value_container.cpp  data_value_container.hpp  flags.cpp  flags.hpp  geometry_container.hpp  global_pointers_vector.hpp  model.cpp  model.hpp  nodal_data.cpp  nodal_data.hpp  periodic_variable_container.hpp  pointer_hash_map_set.hpp  pointer_vector.hpp  pointer_vector_map.hpp  pointer_vector_map_iterator.hpp  pointer_vector_set.hpp  set_identity_function.hpp  sparse_contiguous_row_graph.hpp  sparse_graph.hpp  system_vector.hpp  variable.hpp  variable_data.cpp  variable_data.hpp  variables_list.cpp  variables_list.hpp  variables_list_data_value_container.hpp  weak_pointer_vector.hpp  weak_pointer_vector_iterator.hpp
questCAE/factories/: factory.hpp  linear_solver_factory.hpp  preconditioner_factory.hpp  register_factories.cpp  register_factories.hpp  standard_linear_solver_factory.cpp  standard_linear_solver_factory.hpp  standard_preconditioner_factory.cpp  standard_preconditioner_factory.hpp
questCAE/geometries/: geometry.hpp  geometry_data.hpp  geometry_dimension.hpp  geometry_shape_function_container.hpp  point.hpp  register_quest_components_for_geometry.hpp
questCAE/includes/: accessor.hpp  check.hpp  code_location.hpp  communicator.hpp  condition.hpp  constitutive_law.hpp  data_communicator.hpp  define.hpp  define_python.hpp  define_registry.hpp  dof.hpp  element.hpp  exceptions.hpp  fill_communicator.hpp  fnv_1a_hash.hpp  geometrical_object.hpp  global_pointer.hpp  global_variables.hpp  indexed_object.hpp  initial_state.hpp  io.hpp  kernel.hpp  key_hash.hpp  lock_object.hpp  master_slave_constraint.hpp  matrix_market_interface.hpp  mesh.hpp  mmio.h  model_part.hpp  model_part_io.hpp  mpi_serializer.hpp  node.hpp  parallel_enviroment.hpp  periodic_condition.hpp  process_info.hpp  properties.hpp  quest_application.hpp  quest_components.hpp  quest_export_api.hpp  quest_filesystem.hpp  (+14 more)
questCAE/integration/: integration_info.cpp  integration_info.hpp  integration_point.hpp  quadrature.hpp  quadrilateral_gauss_legendre_integration_points.hpp
questCAE/linear_solvers/: cg_solver.hpp  direct_solver.hpp  iterative_solver.hpp  linear_solver.hpp  scaling_solver.hpp  skyline_lu_custom_scalar_solver.hpp
questCAE/linear_solvers/preconditioner/: diagonal_preconditioner.hpp  preconditioner.hpp
questCAE/linear_solvers/reorderer/: reorderer.hpp
questCAE/modeler/: modeler.hpp
questCAE/processes/: integration_values_extrapolation_to_nodes_process.cpp  integration_values_extrapolation_to_nodes_process.hpp  process.hpp
questCAE/python/: add_accessors_to_python.cpp  add_accessors_to_python.hpp  add_communicator_to_python.cpp  add_communicator_to_python.hpp  add_constitutive_law_to_python.cpp  add_constitutive_law_to_python.hpp  add_constraint_to_python.cpp  add_constraint_to_python.hpp  add_containers_to_python.cpp  add_containers_to_python.hpp  add_data_communicator_to_python.cpp  add_data_communicator_to_python.hpp  add_dofs_to_python.cpp  add_dofs_to_python.hpp  add_factories_to_python.cpp  add_factories_to_python.hpp  add_geometries_to_python.cpp  add_geometries_to_python.hpp  add_geometry_data_to_python.cpp  add_geometry_data_to_python.hpp  add_global_pointers_to_python.cpp  add_global_pointers_to_python.hpp  add_globals_to_python.cpp  add_globals_to_python.hpp  add_io_to_python.cpp  add_io_to_python.hpp  add_kernel_to_python.cpp  add_kernel_to_python.hpp  add_linear_solvers_to_python.cpp  add_linear_solvers_to_python.hpp  add_logger_to_python.cpp  add_logger_to_python.hpp  add_matrix_market_interface_to_python.cpp  add_matrix_market_interface_to_python.hpp  add_matrix_to_python.cpp  add_matrix_to_python.hpp  add_mesh_to_python.cpp  add_mesh_to_python.hpp  add_model_part_to_python.cpp  add_model_part_to_python.hpp  (+29 more)
questCAE/solving_strategies/builder_and_solvers/: builder_and_solvers.hpp  explicit_builder.HPP
questCAE/solving_strategies/schemes/: schemes.hpp
questCAE/solving_strategies/strategies/: explicit_solving_strategy.hpp  implicit_solving_strategy.hpp  solving_strategy.hpp
questCAE/sources/: accessor.cpp  code_location.cpp  communicator.cpp  constitutive_law.cpp  exceptions.cpp  fill_communicator.cpp  geometrical_object.cpp  initial_state.cpp  io.cpp  kernel.cpp  key_hash.cpp  master_slave_constraint.cpp  mmio.c  model_part.cpp  model_part_io.cpp  parallel_environment.cpp  periodic_condition.cpp  process_info.cpp  quest_application.cpp  quest_components.cpp  quest_filesystem.cpp  quest_parameters.cpp  quest_version.cpp  registry.cpp  registry_item.cpp  serializer.cpp
questCAE/space/: ublas_space.hpp
questCAE/utilities/: adjoint_extensions.hpp  atomic_utilities.hpp  color_utilities.hpp  compare_elements_and_conditions_utility.cpp  compare_elements_and_conditions_utility.hpp  constraint_utilities.hpp  counter.hpp  dof_updater.hpp  entities_utilities.hpp  indirect_scalar_fwd.hpp  math_utils.cpp  math_utils.hpp  openmp_utils.hpp  parallel_utilities.cpp  parallel_utilities.hpp  quaternion.hpp  reduction_utilities.hpp  stl_vector_io.hpp  string_utilities.cpp  string_utilities.hpp  table_stream_utility.hpp  timer.cpp  timer.hpp  variable_utils.hpp
(+48 files in other folders)
